--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
   </head>
   <body>
     <div id="app"></div>
-    <script src="//api.map.baidu.com/api?type=webgl&v=1.0&ak=您的密钥"></script>
+    <!-- <script src="//api.map.baidu.com/api?type=webgl&v=1.0&ak=您的密钥"></script> -->
+    <script src="http://180.76.60.136:8219//bmapgl/"></script>
     <script type="module" src="/src/main.ts"></script>
   </body>
 </html>
