优化地图示例

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <div id="app"></div>
-    <script src="//api.map.baidu.com/api?type=webgl&v=1.0&ak=您的密钥"></script>
+    <script src="//api.map.baidu.com/api?type=webgl&v=2.0&ak=VN6iBERONFMRti0I39m5FEBeqQkhxRDE"></script>
     <script type="module" src="/src/main.ts"></script>
   </body>
 </html>
