--- a/index.html
+++ b/index.html
@@ -10,6 +10,6 @@
   <body>
     <div id="app"></div>
     <script src="//api.map.baidu.com/api?type=webgl&v=2.0&ak=VN6iBERONFMRti0I39m5FEBeqQkhxRDE"></script>
-    <script type="module" src="/src/main.ts"></script>
+    <script type="module" src="/examples/main.ts"></script>
   </body>
 </html>
